# wmd

./: .gitignore  Makefile.am  README  WIP  autogen.sh  configure.ac  index.html
doc/: config-mockup
include/: Makefile.am  com.h  core.h  inform.h  param-private.h  param.h  x.h
misc/: params  params.sh
src/: Makefile.am  arg.c  com.c  config.c  generate_structs.tcl  inform.c  main.c  param.c  x.c
